# teste-snowman-backend

./: .gitignore  README.md  manage.py  pyproject.toml
testesnow/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_testesnow.py
tourist_spot/: models.py
tourist_spot/migrations/: 0001_initial.py
