[tool.poetry]
name = "TesteSnow"
version = "0.1.0"
description = ""
authors = ["LucasEduardoGiovanini <39911940+LucasEduardoGiovanini@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
